// Copyright 2018 The Chromium Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";
package common;
option go_package = "chromium.googlesource.com/enterprise/cel/go/common";

import "schema/common/validation.proto";

message Secret {
  string hardcoded = 1;
  string generated = 2 [(v).type = OUTPUT];
  string object_reference = 3 [(v).type = OUTPUT];
}
